<resources>
    <string name="app_name">Uncrowd</string>
    <string name="from_you_text">from you)</string>
    <string name="hours_title_text">Hours: </string>
    <string name="opened_business_text"><b>Open</b></string>
    <string name="closed_business_text"><b>Closed</b></string>
    <string name="types_title_text">Category: </string>
    <string name="trend_title_text">Trend: </string>
    <string name="averages_title_text">Averages: </string>
    <string name="on_my_way_btn_text">On My Way!</string>
    <string name="alternatives_btn_text">Alternatives</string>
    <string name="title_activity_business_extended_details">Extended Details</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Thursday</item>
        <item>Wednesday</item>
        <item>Tuesday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="advanced_search_type_name_text_view"><b>Business Types</b></string>
    <string name="advanced_search_radius_name_text_view"><b>Business radius</b></string>
    <string name="advanced_search_selected_types_text_view">Selected Types:</string>
    <string name="advanced_search_type_hint">Store type</string>
    <string name="advanced_search_name_hint">Store name</string>
    <string name="km">km</string>
    <string name="radius">Radius</string>

    <string name="title_activity_alternatives">Alternatives</string>

    <string name="alternatives_to">Alternatives to</string>

    <string name="take_me_there_btn_text">Take me there!</string>

    <string name="empty_businesses_list_error_text">Connection error, are you connected?\nTry refreshing when ready.</string>
    <string name="empty_businesses_list_text">No businesses found</string>
    <string name="crowd_sort_menu_title">Crowd</string>
    <string name="location_sort_menu_title">Location</string>
    <string name="relevance_sort_title">Relevance</string>

    <string name="notification_action_end">END</string>
    <string name="notification_action_switch">SWITCH</string>

    <string name="notification_neutral_notification">Crowd is the same as originally was.</string>
    <string name="notification_worst_notification">Getting crowded. %d inside (originally %d).</string>
    <string name="notification_better_notification">Getting better ! %d inside (originally %d).</string>
    <string name="advanced_search_btn_text">Advanced search</string>
    <string name="map_btn_text">Results on Map</string>
    <string name="map_click_no_businesses">There are no businesses to show on map.</string>
</resources>
