<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="tamirmo.uncrowd.search.AdvancedSearchViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".search.AdvancedSearchActivity"
        tools:showIn="@layout/activity_advanced_search">

        <EditText
            android:id="@+id/business_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            android:hint="@string/advanced_search_name_hint"
            android:autofillHints="@string/advanced_search_name_hint"
            android:inputType="text"
            android:text="@={viewModel.name}"/>

        <TextView
            android:id="@+id/business_radius_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/advanced_search_radius_name_text_view"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_name_edit_text" />

        <TextView
            android:id="@+id/business_selected_radius_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_name_edit_text"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:text='@{String.format("%d %s", viewModel.radius, @string/km),default="70 km"}'/>

        <SeekBar
            android:id="@+id/business_radius_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_selected_radius_text_view"
            android:layout_margin="8dp"
            android:min="@integer/advanced_search_radius_min"
            android:max="@integer/advanced_search_radius_max"
            android:progress="@={viewModel.radius}"/>

        <TextView
            android:id="@+id/business_radius_min_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_radius_seek_bar"
            android:text='@{String.format("%d %s", @integer/advanced_search_radius_min, @string/km), default="0 KM"}'
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/business_radius_max_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_radius_seek_bar"
            android:text='@{String.format("%d %s", @integer/advanced_search_radius_max, @string/km), default="50 KM"}'
            android:layout_margin="8dp"/>

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/business_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/advanced_search_type_hint"
            app:layout_constraintTop_toBottomOf="@+id/business_radius_min_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            android:dropDownAnchor="@+id/selected_business_types_list"/>
        <TextView
            android:id="@+id/selected_business_types_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/advanced_search_selected_types_text_view"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_type_text_view"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/selected_business_types_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/selected_business_types_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/advanced_search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/advanced_search_button_background">

            <ImageView
                android:id="@+id/advanced_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:srcCompat="@drawable/advanced_search_icon"
                android:layout_marginTop="1dp"
                android:duplicateParentState="true"
                android:clickable="false"/>

            <Button
                android:id="@+id/advanced_search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/advanced_search_icon"
                android:background="@null"
                android:text="@string/advanced_search_btn_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="24sp"
                android:duplicateParentState="true"
                android:clickable="false"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>