<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="business"
            type="tamirmo.uncrowd.data.Business"/>
        <import type="android.view.View"/>
    </data>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">
                <TextView
                    android:id="@+id/business_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{business.name, default="Toys R Us"}'
                    android:textColor="@color/business_fragment_text_color"
                    android:textSize="24sp"
                    android:paddingBottom="13dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/business_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%s (", business.address), default="Sheshet Hayamim 200, Bnei Brak ("}'
                    android:textColor="@color/business_fragment_text_color"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/business_distance"
                    app:layout_constraintStart_toEndOf="@+id/business_address"
                    app:layout_constraintTop_toBottomOf="@+id/business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%.2fKM", business.distance), default="0.2KM"}'
                    android:textColor="@color/business_fragment_distance_text_color"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    app:layout_constraintStart_toEndOf="@+id/business_distance"
                    app:layout_constraintTop_toBottomOf="@+id/business_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_you_text"
                    android:textColor="@color/business_fragment_text_color"/>

                <TextView
                    android:id="@+id/business_types_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/types_title_text"
                    android:layout_margin="8dp"
                    android:textColor="@color/business_fragment_text_color"/>

                <TextView
                    android:id="@+id/business_types"
                    app:layout_constraintStart_toEndOf="@+id/business_types_title"
                    app:layout_constraintTop_toBottomOf="@+id/business_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{business.typesString, default="Toys, Paper, Colors, Kids"}'
                    android:layout_margin="8dp"
                    android:textColor="@color/business_fragment_text_color"/>

                <TextView
                    android:id="@+id/business_hours_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours_title_text"
                    android:textColor="@color/business_fragment_text_color"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/business_hours"
                    app:layout_constraintStart_toEndOf="@+id/business_hours_title"
                    app:layout_constraintTop_toBottomOf="@+id/business_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{business.getTodayOpeningHoursString(), default="10:00 - 17:00"}'
                    android:textColor='@{business.isOpen ? @color/business_fragment_text_color : @color/business_fragment_closed_text_color, default=@color/business_fragment_text_color}'
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/business_is_open_text"
                    app:layout_constraintStart_toEndOf="@+id/business_hours"
                    app:layout_constraintTop_toBottomOf="@+id/business_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{business.isOpen ? "" :@string/closed_business_text, default=@string/opened_business_text}'
                    android:textColor='@{business.isOpen ? @color/business_fragment_opened_text_color : @color/business_fragment_closed_text_color, default=@color/business_fragment_opened_text_color}'
                    android:layout_margin="8dp"/>

                <ImageButton
                    android:id="@+id/expand"
                    app:layout_constraintStart_toEndOf="@+id/business_is_open_text"
                    app:layout_constraintTop_toBottomOf="@+id/business_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/arrow_down"
                    android:paddingTop="12dp"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp" />

                <TextView
                    android:id="@+id/business_hours_expanded"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@+id/business_is_open_text"
                    app:layout_constraintTop_toBottomOf="@+id/business_hours"
                    android:text='@{business.getAllOpeningHoursString(), default="10:00 - 17:00\n"}'
                    android:layout_margin="8dp"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/collapse"
                    app:layout_constraintStart_toEndOf="@+id/business_hours_expanded"
                    app:layout_constraintBottom_toBottomOf="@+id/business_hours_expanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/arrow_up"
                    android:paddingTop="12dp"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:foregroundGravity="bottom"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/people_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@{business.crowdLevel}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/business_hours_expanded"
                    android:layout_margin="8dp" />

                <TextView
                    android:id="@+id/curr_costumers"
                    app:layout_constraintStart_toEndOf="@+id/people_img"
                    app:layout_constraintTop_toBottomOf="@+id/business_hours_expanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%d Customers,", business.crowdCount), default="22 Customer,"}'
                    android:textColor="@color/business_fragment_text_color"
                    android:layout_margin="5dp"/>
                <TextView
                    android:id="@+id/expected_costumers"
                    app:layout_constraintStart_toEndOf="@+id/people_img"
                    app:layout_constraintTop_toBottomOf="@+id/curr_costumers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{String.format("%d Expected", business.expectedCrowdCount), default="30 Expected"}'
                    android:textColor="@color/business_fragment_text_color"
                    android:layout_margin="5dp"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/trend_graph"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expected_costumers"
                    android:layout_margin="8dp" />

                <lecho.lib.hellocharts.view.ColumnChartView
                    android:id="@+id/averages_graph"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trend_graph"
                    android:layout_margin="8dp"/>

                <ImageView
                    android:id="@+id/average_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averages_graph"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp" />
                <TextView
                    android:id="@+id/average_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averages_graph"
                    android:textSize="20sp" />
                <ImageView
                    android:id="@+id/average_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/averages_graph"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/on_my_way_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/average_right"
                    app:layout_constraintBottom_toTopOf="@id/map_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/advanced_search_button_background">

                    <ImageView
                        android:id="@+id/advanced_search_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.2"
                        app:srcCompat="@drawable/on_my_wab_icon"
                        android:layout_marginTop="1dp"
                        android:duplicateParentState="true"
                        android:clickable="false"/>

                    <Button
                        android:id="@+id/advanced_search_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/advanced_search_icon"
                        android:background="@null"
                        android:text="@string/on_my_way_btn_text"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="7dp"
                        android:layout_marginLeft="7dp"
                        android:textSize="24sp"
                        android:duplicateParentState="true"
                        android:clickable="false"/>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/alternatives_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/on_my_way_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/map_button_background">

                    <ImageView
                        android:id="@+id/map_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.2"
                        app:srcCompat="@drawable/alternatives_icon"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:clickable="false"/>

                    <Button
                        android:id="@+id/map_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/map_icon"
                        android:background="@null"
                        android:textColor="#2368d7"
                        android:textAllCaps="false"
                        android:text="@string/alternatives_btn_text"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="24sp"
                        android:clickable="false"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</layout>